--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
      var Creator= "Brandon Eich";
      var Year= "1995";
 
-   </script function myFunction()
-  {
-    document.getElementById("name").innerHTML=Name;
-  }>
+   </script>
 
  </body>
 
