--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 
    <h1>Introducing Javascript</h1>
 
-   <script function myFunction()
-  {
-    document.getElementById("name").innerHTML=Name;
-  }>
+   <script>
    
    <button type="button">Meet JavaScript</button>
    
@@ -26,6 +23,11 @@
      var Extension=".js";
      var Creator= "Brandon Eich";
      var Year= "1995";
+     
+     function myFunction()
+  {
+    document.getElementById("name").innerHTML=Name;
+  }
 
    </script>
 
