--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
     </script>
     
+    <button type="button">Meet JavaScript</button>
+    
      <p>Name: <span id="name"></span></p>
 
      <p>NickName: <span id="name"></span></p>
