--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     </script>
     
-    <button type="button">Meet JavaScript</button>
+    <button type="button" onclick="myFunction()">Meet JavaScript</button>
     
      <p>Name: <span id="name"></span></p>
 
