--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
    
    <button type="button">Meet JavaScript</button>
    
+   <button class="btn btn-success btn-primary" type="button">Success</button>
+   
    <p>Name: <span id="name"></span></p>
 
       var Name= "Javascript";
